force-app/main/default/objects/CPQ_Commit__c/CPQ_Commit__c.object-meta.xml
<CustomObject>
    <description>One row per commit attempt. The unique Idempotency_Key__c is what makes R-17 enforceable by the database rather than by a check-then-insert race (design doc S4.3).</description>
    <label>CPQ Commit</label>
    <nameField>
        <label>Commit</label>
        <displayFormat>CMT-{000000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPQ Commits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>