force-app/main/default/objects/CPQ_Commit__c/fields/Acting_Rep__c.field-meta.xml
<CustomField>
    <fullName>Acting_Rep__c</fullName>
    <description>Attribution, not authorisation. Resolved from actingRepEmail in the request body (design doc S6.4).</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Acting Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>CPQ Commits</relationshipLabel>
    <relationshipName>CPQ_Commits</relationshipName>
    <type>Lookup</type>
</CustomField>