force-app/main/default/objects/CPQ_Commit__c/fields/Request_Hash__c.field-meta.xml
<CustomField>
    <fullName>Request_Hash__c</fullName>
    <description>SHA-256 of the committed configuration. Lets a repeated idempotency key carrying a different payload be rejected as a conflict rather than silently replayed (R-17).</description>
    <label>Request Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>