force-app/main/default/objects/CPQ_Commit__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Committed</fullName>
                    <default>true</default>
                    <label>Committed</label>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>